# SoCalEcologyProject

./: .gitignore  README.md
FullPictureProject/: .gitignore  README.md  dev.sh
FullPictureProject/apps/api/: .env.example  db.py  main.py  models.py  pyproject.toml  requirements.txt  ws.py
FullPictureProject/apps/api/jobs/: __init__.py  air_quality.py  base.py  earthquakes.py  electricity.py  fires.py  flights.py  gasoline.py  interest_rates.py  market_indexes.py  natural_gas.py  prices.py  satellites.py  tides.py  traffic.py  unemployment.py  vessels.py  weather.py  world_bank.py
FullPictureProject/apps/api/routers/: data.py  earthquakes.py  explorer.py  fires.py  flights.py  prices.py  query.py  satellites.py  sources.py  tides.py  traffic.py  vessels.py  weather.py
FullPictureProject/apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
FullPictureProject/apps/web/src/: App.tsx
FullPictureProject/apps/web/src/config/: api.ts  region.ts
FullPictureProject/scripts/: refresh_data.py
OakProject/: README.md  dev.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
OakProject/backend/: db.py  main.py  models.py  requirements.txt
OakProject/backend/routers/: admin.py  occurrences.py  species.py
OakProject/public/: index.html
OakProject/scripts/: export-static.py  fetch-data.py
OakProject/src/: App.jsx  index.css
OakProject/src/components/: DataManagement.jsx  DistributionChart.jsx  Map.jsx  PhotoGallery.jsx  SpeciesCard.jsx  SpeciesDetail.jsx
OakProject/src/data/: species.json
(+14 files in other folders)
