[project]
name = "full-picture-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.0",
    "shapely>=2.0.0",
    "apscheduler>=3.10.4",
    "sgp4>=2.23",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []
