[project]
name = "fullpicture-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "duckdb>=1.2",
    "pandas>=2.2",
    "pyarrow>=19",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["jobs", "routers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
